[project]
name = "openenv-marketplace-negotiation"
version = "0.1.0"
description = "Marketplace negotiation environment"
authors = [
  { name = "Team" }
]

requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv"
]

[project.scripts]
server = "app:app"